[package]
name = "alhc"
version = "0.1.1"
authors = ["Steve Xiao <stevexmh@qq.com>"]
homepage = "https://github.com/Steve-xmh/alhc"
repository = "https://github.com/Steve-xmh/alhc"
description = "Async Lightweight HTTP Client: A async http client library that using system library to reduce binary size if possible."
keywords = ["http", "client", "request", "async"]
categories = ["web-programming", "web-programming::http-client"]
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
anyhow = ["dep:anyhow"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
]}

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[dev-dependencies]
pollster = "0.2"
smol = "1.3.0"

[target.'cfg(target_os = "macos")'.dev-dependencies]
bindgen = "0.63"

[dependencies]
futures = "0.3"
pin-project-lite = "0.2"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }

# Some size optimization here
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true
