[package]
name = "alhc"
version = "0.3.0-alpha.4"
authors = ["Steve Xiao <stevexmh@qq.com>"]
homepage = "https://github.com/Steve-xmh/alhc"
repository = "https://github.com/Steve-xmh/alhc"
description = "Async Lightweight HTTP Client: A async http client library that using system library to reduce binary size if possible. (Currently under heavy development)"
keywords = ["http", "client", "request", "async"]
categories = ["web-programming", "web-programming::http-client"]
edition = "2021"
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "i686-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async_t_boxed = ["dep:async_t", "async_t/boxed"]
serde = ["dep:serde", "dep:serde_json"]
anyhow = ["dep:anyhow"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
]}


[target.'cfg(unix)'.dependencies]
once_cell = "1"

[target.'cfg(unix)'.dependencies.isahc]
version = "1.7"
default-features = false

[dev-dependencies]
futures = "0.3"
pollster = "0.3"
smol = "2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies]
futures-lite = "2.3"
pin-project-lite = "0.2"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
async_t = { version = "0.7", optional = true }
# tracing = "0.1.37"

# Some size optimization here
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true
